--- a/web1/src/app/admin/employee/employee.component.html
+++ b/web1/src/app/admin/employee/employee.component.html
@@ -168,9 +168,9 @@
                             <div class="col-md-5 col-12 ps-0">
                                 <form #assignForm="ngForm" (ngSubmit)="saveUserShop();">
                                     <div class="row">
-                                        <div class="col-lg-6 col-md-6">
-                                           <ng-select bindLabel="Shop" name="ShopID" placeholder="Select Shop" [(ngModel)]="UserShop.  ShopID" [required]="true" #ShopID="ngModel" [closeOnSelect]="true" [searchable]="true">
-                                                <ng-option [value]="s.ID" *ngFor="let s of dropShoplist">{{s.Name}}
+                                        <div class="col-lg-6 col-md-6" >
+                                           <ng-select bindLabel="Shop"  name="ShopID" placeholder="Select Shop" [(ngModel)]="UserShop.ShopID" [required]="true" #ShopID="ngModel" [closeOnSelect]="true" [searchable]="true">
+                                                <ng-option [value]="s.ID" *ngFor="let s of dropShoplist" [disabled]="this.saveUpdateHide">{{s.Name}}
                                                      <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'"> ({{s.AreaName}})</span>
                                                 </ng-option>
                                              </ng-select>
@@ -214,8 +214,12 @@
                                     <tbody>
                                         <tr *ngFor="let s of userList; let i = index">
                                             <td class="text-center">
-                                                <mat-icon class="delete_icon me-1" (click)="deleteItem(i)">delete_forever</mat-icon>
-                                                <mat-icon class="edit_icon" (click)="editUserShop(s)">edit</mat-icon>
+                                                <button class="bg_none " (click)="deleteItem(i)"> 
+                                                    <mat-icon class="delete_icon me-1" >delete_forever</mat-icon>
+                                                </button>
+                                                <button class="bg_none " (click)="editUserShop(s)"> 
+                                                    <mat-icon class="edit_icon" >edit</mat-icon>
+                                                </button>
                                             </td>
                                             <td class="text-center">{{i+1}}</td>
                                             <td class="text-center">{{s.ShopName}}</td>
