--- a/web1/src/app/admin/product-manage/product-manage.component.html
+++ b/web1/src/app/admin/product-manage/product-manage.component.html
@@ -49,7 +49,7 @@
                                             [disabled]="disbleProduct" #GSTTypecontrol>
                                             <mat-option value="None">None</mat-option>
                                             <mat-option value="IGST">IGST</mat-option>
-                                            <mat-option value="CGST-IGST">CGST-IGST</mat-option>
+                                            <mat-option value="CGST-SGST">CGST-IGST</mat-option>
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
@@ -91,7 +91,7 @@
                                 <div *ngIf="newProduct.GSTPercentage === 0" class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Type</mat-label>
-                                        <mat-select name="NewGSTType" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
+                                        <mat-select name="NewGSTType"  [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
                                             <mat-option value="None">None</mat-option>
                                         </mat-select>
                                     </mat-form-field>
@@ -99,9 +99,9 @@
                                 <div *ngIf="newProduct.GSTPercentage !== 0"  class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>GST Type</mat-label>
-                                        <mat-select name="NewGSTType" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
+                                        <mat-select name="NewGSTType" (blur)="gstType()" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
                                             <mat-option value="IGST">IGST</mat-option>
-                                            <mat-option value="CGST-IGST">CGST-SGST</mat-option>
+                                            <mat-option value="CGST-SGST">CGST-SGST</mat-option>
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
@@ -235,9 +235,9 @@
         (click)="modal.dismiss('Cross click')"></button>
     </div>
     <div class="modal-body">
-        <form #f3="ngForm">
-            <div class="row" *ngIf="showAdds">
-                <div class="col-xl-4 col-lg-4 col-md-3 col-sm-2 mb-0">
+        <form #f3="ngForm" (ngSubmit)="updateProductType()">
+            <div class="row" *ngIf="showAdds" >
+                <div class="col-xl-4 col-lg-4 col-md-2 col-sm-2 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Product Type</mat-label>
                         <input matInput name="NewProduct" disabled [(ngModel)]="newProduct.Name" required
@@ -247,21 +247,20 @@
                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>HSN Code</mat-label>
-                        <input matInput name="NewHSNCode" [(ngModel)]="newProduct.HSNCode"
-                            #HSNCodecontrol>
+                        <input matInput name="NewHSNCode" [(ngModel)]="newProduct.HSNCode" #HSNCodecontrol>
                     </mat-form-field>
                 </div>
-                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>GST Percentage</mat-label>
-                        <input matInput type="number" name="NewGSTPercentage" (blur)="gstType()" [(ngModel)]="newProduct.GSTPercentage"
-                            #GSTPercentagecontrol required>
+                        <input matInput type="number" required="true" name="NewGSTPercentage" (blur)="gstType()" [(ngModel)]="newProduct.GSTPercentage"
+                           #GSTPercentagecontrol>
                     </mat-form-field>
                 </div>
                 <div *ngIf="newProduct.GSTPercentage === 0" class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>GST Type</mat-label>
-                        <mat-select name="NewGSTType" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
+                        <mat-select name="NewGSTType"  [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
                             <mat-option value="None">None</mat-option>
                         </mat-select>
                     </mat-form-field>
@@ -269,23 +268,18 @@
                 <div *ngIf="newProduct.GSTPercentage !== 0"  class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>GST Type</mat-label>
-                        <mat-select name="NewGSTType" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
+                        <mat-select name="NewGSTType" (blur)="gstType()" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
                             <mat-option value="IGST">IGST</mat-option>
-                            <mat-option value="CGST-IGST">CGST-SGST</mat-option>
+                            <mat-option value="CGST-SGST">CGST-SGST</mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
-                  
-                    <button class="ms-2"  type="button" mat-raised-button [disabled]=" GstTypeDis === true" color="primary"
-                        (click)="showAdds = !showAdds; updateProductType()">
+                    <button type="submit" (click)="gstType()" class="ms-2" [disabled]="GstTypeDis" mat-raised-button color="primary" >
                         update
                     </button>
                 </div>
             </div>
         </form>
-
-
-
     </div>
 </ng-template>
