--- a/web1/src/app/company-payment/expense/expense.component.html
+++ b/web1/src/app/company-payment/expense/expense.component.html
@@ -6,14 +6,14 @@
                 <div class="card">
                     <div class="header p-0 py-0 pt-1">
                         <div class="row">
-                            <div class="col-md-1 col-6 p-0 ms-3">
+                            <div class="col-lg-2 col-md-2 col-4 p-0 ms-3">
                                 <h2>Expense List </h2>
                             </div>
                             <div class="ps-md-0 ps-0 pt-1" style="width: 40px;">
                                 <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
                                     (click)="exportAsXLSX()"></i>
                             </div>
-                            <div class="col-md-2 col-1 ps-md-0 ps-1">
+                            <div class="col-md-2 col-6 ps-md-0 ps-1">
                                 <select class=" form-control"
                                     style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                     [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -40,7 +40,7 @@
                             </div>
                             <div class="col-md-1 col-1" style="width: 40px;padding: 0;">
                                 <button *ngIf="addExpenseList" class="bg-none" (click)="openModal(content)">
-                                    <mat-icon  class="col-white plus_icon me-1" data-mdb-toggle="modal"
+                                    <mat-icon class="col-white plus_icon me-1" data-mdb-toggle="modal"
                                         data-mdb-target="#exampleModal"> add</mat-icon>
                                 </button>
                             </div>
@@ -72,8 +72,9 @@
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let data of dataList  let i = index;">
-                                        <td class="text-center" style="width: 7%;">
-                                            <button *ngIf="editExpenseList" class="bg-none" (click)="openEditModal(content,data)">
+                                        <td class="text-center" style="width: 7%; white-space: nowrap;">
+                                            <button *ngIf="editExpenseList" class="bg-none"
+                                                (click)="openEditModal(content,data)">
                                                 <mat-icon class="edit_icon ms-1" data-mdb-toggle="modal"
                                                     data-mdb-target="#exampleModal">
                                                     edit
@@ -124,7 +125,7 @@
                 <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 mb-0 ">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Shop Name</mat-label>
-                        <mat-select name="ShopID" [(ngModel)]="data.ShopID"  required>
+                        <mat-select name="ShopID" [(ngModel)]="data.ShopID" required>
                             <mat-option [value]="sup.ID" *ngFor="let sup of dropShoplist">
                                 {{sup.Name}}
                                 <span [style.color]="'blue'" *ngIf="sup.AreaName !== 'null'">({{sup.AreaName}})</span>
@@ -133,7 +134,7 @@
                         <mat-error> Select Shop</mat-error>
                     </mat-form-field>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>ExpenseType</mat-label>
                         <mat-select name="Category" [(ngModel)]="data.Category" required>
@@ -144,7 +145,7 @@
                         </mat-error>
                     </mat-form-field>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Given To</mat-label>
                         <input matInput name="Name" [(ngModel)]="data.Name"
@@ -152,14 +153,14 @@
                         <mat-error>Name is required</mat-error>
                     </mat-form-field>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Amount</mat-label>
                         <input matInput name="MobileNo2" type="number" min="0" [(ngModel)]="data.Amount" required />
                         <mat-error>Amount is required</mat-error>
                     </mat-form-field>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Payment Mode</mat-label>
                         <mat-select name="PaymentMode" [(ngModel)]="data.PaymentMode" #singleSelect required>
@@ -183,14 +184,14 @@
                         </mat-error>
                     </mat-form-field>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Reference</mat-label>
                         <input matInput name="Reference" [(ngModel)]="data.PaymentRefereceNo"
                             (ngModelChange)="data.PaymentRefereceNo = onChange($event)" />
                     </mat-form-field>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-6 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Comments</mat-label>
                         <input matInput name="Comments" [(ngModel)]="data.Comments"
