--- a/web1/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web1/src/app/inventory/purchase-list/purchase-list.component.html
@@ -54,20 +54,20 @@
                     </button>
                   </h2>
                 </div>
-                <div *ngIf="this.dataList.length != 0"  class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2"
+                  style="border: 1px solid #b4b4b4; height: 38px;">
                   <span style="font-size:15px;font-weight:bold;">Total Amount : </span>
-                  <span
-                    style="color:#232323;font-size:15px;font-weight:bold;">{{this.TotalAmountInv}}</span>
+                  <span style="color:#232323;font-size:15px;font-weight:bold;">{{this.TotalAmountInv}}</span>
                 </div>
-                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2"
+                  style="border: 1px solid #b4b4b4; height: 38px;">
                   <span style="font-size:15px;font-weight:bold;">Due Amount : </span>
-                  <span
-                    style="color:#232323;font-size:15px;font-weight:bold;">{{this.DueAmountIvn}}</span>
+                  <span style="color:#232323;font-size:15px;font-weight:bold;">{{this.DueAmountIvn}}</span>
                 </div>
-                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2"
+                  style="border: 1px solid #b4b4b4; height: 38px;">
                   <span style="font-size:15px;font-weight:bold;">Paid Amount : </span>
-                  <span
-                    style="color:#232323;font-size:15px;font-weight:bold;">{{this.CustomerTotal}}</span>
+                  <span style="color:#232323;font-size:15px;font-weight:bold;">{{this.CustomerTotal}}</span>
                 </div>
                 <div class="col-md-2 col-4 ms-auto">
                   <!-- <div class="input-group">
@@ -76,71 +76,75 @@
                   </div> -->
                 </div>
                 <div class="col-md-1 col-1" style="width: 40px;padding: 0;">
-                  <button *ngIf="addPurchaseList"  class="bg-none" [routerLink]="['/inventory/purchase',0]">
+                  <button *ngIf="addPurchaseList" class="bg-none" [routerLink]="['/inventory/purchase',0]">
                     <mat-icon class="col-white plus_icon me-1"> add</mat-icon>
                   </button>
                 </div>
               </div>
             </div>
             <!-- purchase list start -->
-            
+
             <div class="body mt-md-1 pt-3 mt-5 p-2">
               <div class="row table-responsive" *ngIf="gridview">
                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
                   <div class="table-responsive">
-                  <div *ngIf="this.dataList.length == 0" class="datanotFound" >Data Not Found</div>
-                  <table *ngIf="this.dataList.length != 0"  class="table table-striped table-hover table-sm table-bordered"
-                    style="border: 2px solid #fff !important; ">
-                    <thead>
-                      <tr>
-                        <th style="text-align: left;">Action</th>
-                        <th style="text-align: left;">S.No</th>
-                        <th style="text-align: left;">SupplierName</th>
-                        <th style="text-align: left;">InvoiceNo</th>
-                        <th style="text-align: left;">ReceivedAt</th>
-                        <th style="text-align: left;">PurchaseDate</th>
-                        <th style="text-align: left;">PaymentStatus</th>
-                        <th style="text-align: left;">GSTNo</th>
-                        <th style="text-align: left;">Quantity</th>
-                        <th style="text-align: left;">InvoiceAmount</th>
-                        <th style="text-align: left;">Discount</th>
-                        <th style="text-align: left;">GSTAmount</th>
-                        <th style="text-align: left;">CreatedBy</th>
-                        <th style="text-align: left;">UpdatedBy</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr class="text-center" *ngFor="let data of dataList let i = index;" style="white-space: nowrap;">
-                        <td style="width: 5%;">
-                          <button class="detail_icons bg-btn" (click)="openModal(content,data)">
-                            <i class="fas fa-info-circle" data-mdb-toggle="modal" data-mdb-target="#exampleModal"> </i>
-                          </button>
-                          <button *ngIf="editPurchaseList"  class="bg-btn" [routerLink]="['/inventory/purchase',data.ID]">
-                            <mat-icon class="edit_icon ms-1" >edit
-                            </mat-icon>
-                          </button>
-                          <button *ngIf="deletePurchaseList"  class="bg-btn" (click)="deleteItem(i)">
-                            <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
-                          </button>
-                        </td>
-                        <td>{{dataList.length - i }}</td>
-                        <td>{{data.SupplierName}}</td>
-                        <td>{{data.InvoiceNo}}</td>
-                        <td>{{data.ShopName}}<span [style.color]="'blue'"
-                            *ngIf="data.AreaName !== 'null'">({{data.AreaName}})</span></td>
-                        <td>{{data.PurchaseDate}}</td>
-                        <td>{{data.PaymentStatus}}</td>
-                        <td>{{(data.GSTNo !== 'null')? data.GSTNo: ''}}</td>
-                        <td>{{data.Quantity}}</td>
-                        <td>{{data.TotalAmount}}</td>
-                        <td>{{data.DiscountAmount}}</td>
-                        <td>{{data.GSTAmount}}</td>
-                        <td>{{data.CreatedPerson}}</td>
-                        <td>{{data.UpdatedPerson}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
+                    <div *ngIf="this.dataList.length == 0" class="datanotFound d-none d-lg-block">Data Not Found</div>
+                    <table *ngIf="this.dataList.length != 0"
+                      class="table table-striped table-hover table-sm table-bordered"
+                      style="border: 2px solid #fff !important; ">
+                      <thead>
+                        <tr>
+                          <th style="text-align: left;">Action</th>
+                          <th style="text-align: left;">S.No</th>
+                          <th style="text-align: left;">SupplierName</th>
+                          <th style="text-align: left;">InvoiceNo</th>
+                          <th style="text-align: left;">ReceivedAt</th>
+                          <th style="text-align: left;">PurchaseDate</th>
+                          <th style="text-align: left;">PaymentStatus</th>
+                          <th style="text-align: left;">GSTNo</th>
+                          <th style="text-align: left;">Quantity</th>
+                          <th style="text-align: left;">InvoiceAmount</th>
+                          <th style="text-align: left;">Discount</th>
+                          <th style="text-align: left;">GSTAmount</th>
+                          <th style="text-align: left;">CreatedBy</th>
+                          <th style="text-align: left;">UpdatedBy</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr class="text-center" *ngFor="let data of dataList let i = index;"
+                          style="white-space: nowrap;">
+                          <td style="width: 5%;">
+                            <button class="detail_icons bg-btn" (click)="openModal(content,data)">
+                              <i class="fas fa-info-circle" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
+                              </i>
+                            </button>
+                            <button *ngIf="editPurchaseList" class="bg-btn"
+                              [routerLink]="['/inventory/purchase',data.ID]">
+                              <mat-icon class="edit_icon ms-1">edit
+                              </mat-icon>
+                            </button>
+                            <button *ngIf="deletePurchaseList" class="bg-btn" (click)="deleteItem(i)">
+                              <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
+                            </button>
+                          </td>
+                          <td>{{dataList.length - i }}</td>
+                          <td>{{data.SupplierName}}</td>
+                          <td>{{data.InvoiceNo}}</td>
+                          <td>{{data.ShopName}}<span [style.color]="'blue'"
+                              *ngIf="data.AreaName !== 'null'">({{data.AreaName}})</span></td>
+                          <td>{{data.PurchaseDate}}</td>
+                          <td>{{data.PaymentStatus}}</td>
+                          <td>{{(data.GSTNo !== 'null')? data.GSTNo: ''}}</td>
+                          <td>{{data.Quantity}}</td>
+                          <td>{{data.TotalAmount}}</td>
+                          <td>{{data.DiscountAmount}}</td>
+                          <td>{{data.GSTAmount}}</td>
+                          <td>{{data.CreatedPerson}}</td>
+                          <td>{{data.UpdatedPerson}}</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
