--- a/web1/src/app/inventory/search-barcode/search-barcode.component.html
+++ b/web1/src/app/inventory/search-barcode/search-barcode.component.html
@@ -117,7 +117,7 @@
                         <!-- list start -->
                         <form>
                             <div class="row">
-                                <div class="col-sm-12" style="overflow: auto; height: 400px;">
+                                <div class="col-12" style="overflow-y: auto; height: 400px;">
                                     <div class="table-responsive">
                                         <table class="table table-striped table-hover table-sm table-bordered"
                                             style="border: 2px solid #fff !important;">
