--- a/web1/src/app/po/fitter-invoice-list/fitter-invoice-list.component.html
+++ b/web1/src/app/po/fitter-invoice-list/fitter-invoice-list.component.html
@@ -8,14 +8,14 @@
                 <div class="card">
                     <div class="header">
                         <div  *ngIf="this.id == '0'" class="row">
-                            <div class="col-md-2 col-8 p-0 ms-3">
+                            <div class="col-lg-2 col-md-4 col-8 p-0 ms-2">
                               <h2>Fitter Invoice List
                                 <button class="bg-none" (click)="exportAsXLSX()">
                                   <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"></i>
                                 </button>
                               </h2>
                             </div>
-                            <div class="col-md-2 col-1 ps-md-0 ps-1">
+                            <div class="col-md-2 col-1 ps-md-0 ps-3">
                               <select class=" form-control"
                                 style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                 [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -76,7 +76,7 @@
                             </div>
                           </div>
                     </div>
-                    <div class="body mt-2">
+                    <div class="body mt-5 pt-3 mt-md-2 pt-md-0">
                         <form  #f2="ngForm" >
                           <div class="row">
                               <div class="col-sm-12 p-0" style="overflow: auto; height: 480px;">
@@ -100,7 +100,7 @@
                                       </thead>
                                       <tbody class="text-center">
                                         <tr *ngFor="let v of dataList ; let i = index;" >
-                                            <td>
+                                            <td style="white-space: nowrap;">
                                                 <button class="bg-btn" [routerLink]="['/po/fitterInvoiceDetail',v.ID]">
                                                     <mat-icon class="edit_icon ms-1 p-1">remove_red_eye
                                                     </mat-icon>
