--- a/web1/src/app/po/supplier-po-list/supplier-po-list.component.html
+++ b/web1/src/app/po/supplier-po-list/supplier-po-list.component.html
@@ -1,4 +1,3 @@
-
 <section class="content">
     <div class="container-fluid">
         <div class="block-header"> </div>
@@ -11,36 +10,37 @@
                     <div class="body">
                         <form #f="ngForm" autocomplete="off">
                             <div class="row">
-                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
-                                        <mat-form-field class="example-full-width mb-0 paddingInp">
-                                            <mat-label>From</mat-label>
-                                            <input matInput name="FromDate" type="date" [(ngModel)]="data.FromDate"
-                                                #DOBcontrol />
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
-                                        <mat-form-field class="example-full-width mb-0 paddingInp ">
-                                            <mat-label>To</mat-label>
-                                            <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate" />
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
+                                    <mat-form-field class="example-full-width mb-0 paddingInp">
+                                        <mat-label>From</mat-label>
+                                        <input matInput name="FromDate" type="date" [(ngModel)]="data.FromDate"
+                                            #DOBcontrol />
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
+                                    <mat-form-field class="example-full-width mb-0 paddingInp ">
+                                        <mat-label>To</mat-label>
+                                        <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate" />
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-2 col-lg-2 col-md-4 col-12 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Select Supplier</mat-label>
                                         <mat-select name="supplier" [(ngModel)]="data.SupplierID"
-                                            [ngModelOptions]="{standalone: true}" >
+                                            [ngModelOptions]="{standalone: true}">
                                             <mat-option [value]=0>All</mat-option>
-                                            <mat-option *ngFor="let s of supplierList  let i = index;" value="{{s.ID}}" required>
+                                            <mat-option *ngFor="let s of supplierList  let i = index;" value="{{s.ID}}"
+                                                required>
                                                 {{s.Name}}
                                             </mat-option>
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                <div class="col-xl-2 col-lg-2 col-md-4 col-12 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Shop Name</mat-label>
                                         <mat-select name="Supplier" editable="true" [(ngModel)]="data.ShopID"
-                                            [ngModelOptions]="{standalone: true}" #singleSelect  required>
+                                            [ngModelOptions]="{standalone: true}" #singleSelect required>
                                             <mat-option [value]=0>All</mat-option>
                                             <mat-option *ngFor="let sup of shopList  let i = index;" [value]="sup.ID">
                                                 {{sup.Name}} <span [style.color]="'blue'"
@@ -49,89 +49,90 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-xl-3 col-lg-3 col-md-6 col-12">
                                     <button class="me-2" (click)="Search()" type="button" mat-raised-button
                                         color="primary">
                                         Search
                                     </button>
-                                    <button type="button"  (click)="Reset()" mat-raised-button color="warn">
-                                         Reset
+                                    <button type="button" (click)="Reset()" mat-raised-button color="warn">
+                                        Reset
                                     </button>
-                                    <button  class="ms-2"  type="button" mat-raised-button>PDF</button>
+                                    <button class="ms-2" type="button" mat-raised-button>PDF</button>
                                 </div>
                             </div>
                         </form>
                     </div>
 
                     <div class="row">
-                        <div class="col-md-2 col-8 ">
+                        <div class="col-xl-2 col-lg-2 col-md-0 col-0 ">
                         </div>
-                        <div class="col-md-4 col-4 mx-md-auto" style="margin-top:0px;">
-                          <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
-                            [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
-                            (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
-                          </ngb-pagination>
+                        <div class="col-xl-4 col-lg-4 col-md-10 col-9 mx-md-auto pt-3 pt-lg-0" style="margin-top:0px;">
+                            <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                                [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage"
+                                [(page)]="currentPage" (pageChange)="getList()" [maxSize]="5" [rotate]="true"
+                                [ellipses]="false" [boundaryLinks]="true">
+                            </ngb-pagination>
                         </div>
-                        <div class="col-md-1 col-1 ps-md-0 ps-1">
+                        <div class="col-xl-1 col-lg-1  col-md-2 col-3 ps-md-0 ps-1 pt-3 pt-lg-0">
                             <select class=" form-control"
-                              style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
-                              [(ngModel)]="itemsPerPage" (change)="getList();">
-                              <option [ngValue]="10">Show 10 Row</option>
-                              <option [ngValue]="25">Show 25 Row</option>
-                              <option [ngValue]="50">Show 50 Row</option>
-                              <option [ngValue]="100">Show 100 Row</option>
-                              <option [ngValue]="250">Show 250Row</option>
-                              <option [ngValue]="500">Show 500 Row</option>
+                                style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
+                                [(ngModel)]="itemsPerPage" (change)="getList();">
+                                <option [ngValue]="10">Show 10 Row</option>
+                                <option [ngValue]="25">Show 25 Row</option>
+                                <option [ngValue]="50">Show 50 Row</option>
+                                <option [ngValue]="100">Show 100 Row</option>
+                                <option [ngValue]="250">Show 250Row</option>
+                                <option [ngValue]="500">Show 500 Row</option>
                             </select>
-                          </div>
+                        </div>
                     </div>
 
                     <div class="body mt-2">
-                      <form  #f2="ngForm" >
-                        <div class="row">
-                            <div class="col-sm-12 p-0" style="overflow: auto; height: 480px;">
-                                <table class="table table-striped table-hover table-sm table-bordered"
-                                    style="border: 2px solid #fff !important; ">
-                                    <thead class="text-center">
-                                        <tr>
-                                            <th>SNo</th>
-                                            <th>MRD No</th>
-                                            <th>CustomerName</th>
-                                            <th>MobileNo</th>
-                                            <th>InvoiceDate</th>
-                                            <th>DeliveryDate</th>
-                                            <th>InvoiceNo</th>
-                                            <th>ProductName</th>
-                                            <th>Qty</th>
-                                            <th>SupplierName</th>
-                                            <th>SupplierDocNo</th>
-                                            <th>ShopName</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody class="text-center">
-                                        <tr *ngFor="let v of dataList ; let i = index;">
-                                            <td>{{dataList.length - i}}</td>
-                                            <td>{{v.MRDNo}}</td>
-                                            <td>{{v.CustomerName}}</td>
-                                            <td>{{v.MobileNo1}}</td>
-                                            <td>{{v.InvoiceDate }}</td>
-                                            <td>{{v.DeliveryDate }}</td>
-                                            <td>{{v.InvoiceNo}}</td>
-                                            <td>{{v.ProductName}}</td>
-                                            <td>{{v.Quantity}}</td>
-                                            <td>{{v.SupplierID === -1 ? v.ShopName : v.SupplierName}}</td>
-                                            <td>{{v.SupplierDocNo}}</td>
-                                            <td>{{v.ShopName}}<span [style.color]="'blue'" *ngIf="v.AreaName !== 'null'">({{v.AreaName}})</span></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                        <form #f2="ngForm">
+                            <div class="row">
+                                <div class="col-sm-12 p-0" style="overflow: auto; height: 480px;">
+                                    <table class="table table-striped table-hover table-sm table-bordered"
+                                        style="border: 2px solid #fff !important; ">
+                                        <thead class="text-center">
+                                            <tr>
+                                                <th>SNo</th>
+                                                <th>MRD No</th>
+                                                <th>CustomerName</th>
+                                                <th>MobileNo</th>
+                                                <th>InvoiceDate</th>
+                                                <th>DeliveryDate</th>
+                                                <th>InvoiceNo</th>
+                                                <th>ProductName</th>
+                                                <th>Qty</th>
+                                                <th>SupplierName</th>
+                                                <th>SupplierDocNo</th>
+                                                <th>ShopName</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody class="text-center">
+                                            <tr *ngFor="let v of dataList ; let i = index;">
+                                                <td>{{dataList.length - i}}</td>
+                                                <td>{{v.MRDNo}}</td>
+                                                <td>{{v.CustomerName}}</td>
+                                                <td>{{v.MobileNo1}}</td>
+                                                <td>{{v.InvoiceDate }}</td>
+                                                <td>{{v.DeliveryDate }}</td>
+                                                <td>{{v.InvoiceNo}}</td>
+                                                <td>{{v.ProductName}}</td>
+                                                <td>{{v.Quantity}}</td>
+                                                <td>{{v.SupplierID === -1 ? v.ShopName : v.SupplierName}}</td>
+                                                <td>{{v.SupplierDocNo}}</td>
+                                                <td>{{v.ShopName}}<span [style.color]="'blue'"
+                                                        *ngIf="v.AreaName !== 'null'">({{v.AreaName}})</span></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
-                        </div>
-                      </form>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
