--- a/web1/src/app/product/add-manage/add-manage.component.css
+++ b/web1/src/app/product/add-manage/add-manage.component.css
@@ -33,3 +33,8 @@ input::-webkit-inner-spin-button {
     padding: 0;
     cursor: pointer;
 }
+
+
+.btn_icon.mat-button-disabled:not([class*=mat-elevation-z]), .btn_icon.mat-button-disabled:not([class*=mat-elevation-z]) {
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 0px rgba(0, 0, 0, 0.12);
+}
