--- a/web1/src/app/product/product-manage/product-manage.component.html
+++ b/web1/src/app/product/product-manage/product-manage.component.html
@@ -49,7 +49,7 @@
                                             [disabled]="disbleProduct" #GSTTypecontrol>
                                             <mat-option value="None">None</mat-option>
                                             <mat-option value="IGST">IGST</mat-option>
-                                            <mat-option value="CGST-IGST">CGST-IGST</mat-option>
+                                            <mat-option value="CGST-SGST">CGST-SGST</mat-option>
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
@@ -71,49 +71,55 @@
                                 </div>
                             </div>
 
-                            <div class="row" *ngIf="showAdd">
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
-                                    <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>Product Type</mat-label>
-                                        <input matInput name="NewProduct" [(ngModel)]="newProduct.Name" required
-                                            #NewProductTypecontrol>
-                                    </mat-form-field>
+                            <form #f2="ngForm" autocomplete="off">
+                                <div class="row"  *ngIf="showAdd">
+                                    <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                                        <mat-form-field class="example-full-width mb-0">
+                                            <mat-label>Product Type</mat-label>
+                                            <input matInput name="NewProduct" [(ngModel)]="newProduct.Name" required
+                                                #NewProductTypecontrol>
+                                        </mat-form-field>
+                                    </div>
+                                    <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
+                                        <mat-form-field class="example-full-width mb-0">
+                                            <mat-label>HSN Code</mat-label>
+                                            <input matInput name="NewHSNCode" [(ngModel)]="newProduct.HSNCode"
+                                                #HSNCodecontrol>
+                                        </mat-form-field>
+                                    </div>
+                                    <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
+                                        <mat-form-field class="example-full-width mb-0">
+                                            <mat-label>GST Percentage</mat-label>
+                                            <input matInput type="number" required="true" name="NewGSTPercentage" (blur)="gstType()" [(ngModel)]="newProduct.GSTPercentage"
+                                               #GSTPercentagecontrol>
+                                        </mat-form-field>
+                                    </div>
+                                    <div *ngIf="newProduct.GSTPercentage === 0" class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
+                                        <mat-form-field class="example-full-width mb-0">
+                                            <mat-label>GST Type</mat-label>
+                                            <mat-select name="NewGSTType"  [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
+                                                <mat-option value="None">None</mat-option>
+                                            </mat-select>
+                                        </mat-form-field>
+                                    </div>
+                                    <div *ngIf="newProduct.GSTPercentage !== 0"  class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
+                                        <mat-form-field class="example-full-width mb-0">
+                                            <mat-label>GST Type</mat-label>
+                                            <mat-select name="NewGSTType" (blur)="gstType()" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
+                                                <mat-option value="IGST">IGST</mat-option>
+                                                <mat-option value="CGST-SGST">CGST-SGST</mat-option>
+                                            </mat-select>
+                                        </mat-form-field>
+                                    </div>
+                                   
+                                    <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
+                                        <button *ngIf="hideSave" mat-mini-fab color="primary"
+                                            (click)="showAdd = !showAdd;  saveProduct();" [disabled]="!f2.valid || GstTypeDis">
+                                            <mat-icon>save</mat-icon>
+                                        </button>
+                                    </div>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
-                                    <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>HSN Code</mat-label>
-                                        <input matInput name="NewHSNCode" [(ngModel)]="newProduct.HSNCode"
-                                            #HSNCodecontrol>
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
-                                    <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>GST Percentage</mat-label>
-                                        <input matInput name="NewGSTPercentage" [(ngModel)]="newProduct.GSTPercentage"
-                                            #GSTPercentagecontrol>
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
-                                    <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>GST Type</mat-label>
-                                        <mat-select name="NewGSTType" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol>
-                                            <mat-option value="None">None</mat-option>
-                                            <mat-option value="IGST">IGST</mat-option>
-                                            <mat-option value="CGST-IGST">CGST-SGST</mat-option>
-                                        </mat-select>
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
-                                    <button type="button" *ngIf="hideSave" mat-mini-fab color="primary"
-                                        (click)="showAdd = !showAdd; saveProduct()">
-                                        <mat-icon>save</mat-icon>
-                                    </button>
-                                    <!-- <button class="ms-4" mat-mini-fab color="primary"
-                                        (click)="showAdd = !showAdd; updateProductType()">
-                                        <mat-icon>update</mat-icon>
-                                    </button> -->
-                                </div>
-                            </div>
+                                </form>
 
                             <div class="row mt-3 mt-sm-0 mb-3 mb-sm-0">
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
@@ -239,7 +245,8 @@
             (click)="modal.dismiss('Cross click')"></button>
     </div>
     <div class="modal-body">
-        <div class="row" *ngIf="showAdds">
+        <form #f3="ngForm" (ngSubmit)="updateProductType()">
+        <div class="row" *ngIf="showAdds" >
             <div class="col-xl-4 col-lg-4 col-md-2 col-sm-2 mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Product Type</mat-label>
@@ -253,30 +260,36 @@
                     <input matInput name="NewHSNCode" [(ngModel)]="newProduct.HSNCode" #HSNCodecontrol>
                 </mat-form-field>
             </div>
-            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+            <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>GST Percentage</mat-label>
-                    <input matInput name="NewGSTPercentage" [(ngModel)]="newProduct.GSTPercentage"
-                        #GSTPercentagecontrol>
+                    <input matInput type="number" required="true" name="NewGSTPercentage" (blur)="gstType()" [(ngModel)]="newProduct.GSTPercentage"
+                       #GSTPercentagecontrol>
                 </mat-form-field>
             </div>
-            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+            <div *ngIf="newProduct.GSTPercentage === 0" class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>GST Type</mat-label>
-                    <mat-select name="NewGSTType" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol>
+                    <mat-select name="NewGSTType"  [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
                         <mat-option value="None">None</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div *ngIf="newProduct.GSTPercentage !== 0"  class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>GST Type</mat-label>
+                    <mat-select name="NewGSTType" (blur)="gstType()" [(ngModel)]="newProduct.GSTType" #GSTTypecontrol  required>
                         <mat-option value="IGST">IGST</mat-option>
-                        <mat-option value="CGST-IGST">CGST-IGST</mat-option>
+                        <mat-option value="CGST-SGST">CGST-SGST</mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
-
-                <button type="button" class="ms-2" type="button" mat-raised-button color="primary"
-                    (click)="showAdds = !showAdds; updateProductType()">
+                <button type="submit" (click)="gstType()" class="ms-2" [disabled]="GstTypeDis" mat-raised-button color="primary" >
                     update
                 </button>
             </div>
         </div>
+    </form>
     </div>
 </ng-template>
