--- a/web1/src/app/report/eyetest-report/eyetest-report.component.html
+++ b/web1/src/app/report/eyetest-report/eyetest-report.component.html
@@ -14,7 +14,7 @@
                         <div class="body">
                             <form class="p-3 pb-0" #f1="ngForm" >
                                 <div class="row">
-                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                                    <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>Filter Types</mat-label>
                                             <mat-select name="FilterTypes" [(ngModel)]="data.FilterTypes">
@@ -23,20 +23,20 @@
                                             </mat-select>
                                         </mat-form-field>
                                     </div>
-                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                                    <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>From</mat-label>
                                             <input matInput name="FromDate" type="date" [(ngModel)]="data.FromDate"
                                                 #DOBcontrol [disabled]="!editEyeTestReport"/>
                                         </mat-form-field>
                                     </div>
-                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                                    <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>To</mat-label>
                                             <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate" [disabled]="!editEyeTestReport"/>
                                         </mat-form-field>
                                     </div>
-                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                    <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>ShopName</mat-label>
                                             <mat-select name="ShopID" [(ngModel)]="data.ShopID" multiple>
@@ -48,8 +48,8 @@
                                             </mat-select>
                                         </mat-form-field>
                                     </div>
-                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
-                                        <button class="me-3" type="submit" mat-raised-button color="primary">
+                                    <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                        <button class="me-2" type="submit" mat-raised-button color="primary">
                                              Search
                                         </button>
                                         <button type="button" mat-raised-button color="warn" >
