--- a/web1/src/app/report/transfer-product-report/transfer-product-report.component.html
+++ b/web1/src/app/report/transfer-product-report/transfer-product-report.component.html
@@ -90,7 +90,7 @@
                                     <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
                                         <mat-form-field class="example-full-width mb-0 paddingInp">
                                             <mat-label>Select Product</mat-label>
-                                            <mat-select name="FieldType" [(ngModel)]="data.ProductCategory"
+                                            <mat-select name="ProductCategory" [(ngModel)]="data.ProductCategory"
                                                 (selectionChange)="getFieldList()" required #Typecontrol>
                                                 <mat-option [value]=0>All</mat-option>
                                                 <mat-option *ngFor="let prod of prodList   let i = index;"
