--- a/web1/src/app/sale/commission-list/commission-list.component.html
+++ b/web1/src/app/sale/commission-list/commission-list.component.html
@@ -8,8 +8,8 @@
                 <div class="card">
                     <div class="header">
                         <div  *ngIf="this.id == '0'" class="row">
-                            <div class="col-md-2 col-8 p-0 ms-3">
-                              <h2>Loyalty Invoice List
+                            <div class="col-xl-2 col-lg-3 col-md-4 col-8 p-0 ms-3">
+                              <h2>Loyalty InvoiceList
                                 <button class="bg-none" (click)="exportAsXLSX()">
                                   <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"></i>
                                 </button>
@@ -60,7 +60,7 @@
                             </div>
                           </div>
                     </div>
-                    <div class="body mt-2">                  
+                    <div class="body mt-5 mt-md-2 pt-3 ">                  
                         <form  #f2="ngForm" >
                           <div class="row">
                               <div class="col-sm-12 p-0" style="overflow: auto; height: 480px;">
