--- a/web1/src/app/sale/commission/commission.component.html
+++ b/web1/src/app/sale/commission/commission.component.html
@@ -10,7 +10,7 @@
                     <div class="body">
                         <form autocomplete="off" #f="ngForm">
                             <div class="row">
-                                <div class="col-xl-2 col-md-2 col-sm-12 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-4 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payment Type</mat-label>
                                         <mat-select name="reportType" placeholder="Select Payee Type"
@@ -21,7 +21,7 @@
                                         <mat-error>supplier is required</mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-md-2 col-sm-12 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-4 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payee Name</mat-label>
                                         <mat-select name="PayeeID" [(ngModel)]=" data.PayeeName"  >
@@ -33,7 +33,7 @@
                                         <mat-error>Payee is required</mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                <div class="col-xl-2 col-lg-2 col-md-4 col-12 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Shop Name</mat-label>
                                         <mat-select name="Supplier" editable="true" [(ngModel)]="data.ShopID" (selectionChange)="getCommissionDetail()"
@@ -46,14 +46,14 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Invoice Date</mat-label>
                                         <input matInput name="InvoiceDate" type="date" [(ngModel)]="data.PurchaseDate"
                                             [ngModelOptions]="{standalone: true}" required>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-md-2 col-sm-12 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Invoice No.</mat-label>
                                         <input matInput name="InvoiceNo" [(ngModel)]="data.InvoiceNo"
@@ -67,6 +67,7 @@
                         <div class="body ">
                           <div class="row">
                             <div class="col-sm-12" style="overflow: auto; height: 450px;">
+                                <div class="table-responsive">
                                 <table class="table table-striped table-hover table-sm table-bordered"
                                     style="border: 2px solid #fff !important;" id="ProductTransferExcel">
                                     <thead>
@@ -106,17 +107,17 @@
                                     </tbody>
                                 </table>
                             </div>
+                            </div>
                           </div>
                           <div class="row">
-                            <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                            <div class="col-xl-1 col-lg-1 col-md-3 col-6 mb-0">
                                 <mat-form-field class="example-full-width mb-0">
                                     <mat-label class="red">Quantity</mat-label>
                                     <input class="red" type="number" min="0" matInput name="Quantity" [(ngModel)]="data.Quantity"
                                         disabled #Quantitytcontrol [autocomplete]="false">
                                 </mat-form-field>
                             </div>
-                
-                            <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                            <div class="col-xl-1 col-lg-1 col-md-3 col-6 mb-0">
                                 <mat-form-field class="example-full-width mb-0">
                                     <mat-label class="red">Total Amount</mat-label>
                                     <input class="red" matInput name="TotalAmountt"
@@ -124,7 +125,7 @@
                                         #TotalAmounttcontrol [autocomplete]="false">
                                 </mat-form-field>
                             </div>
-                            <div class="col-xl-2 col-lg-2 col-md-5 col-sm-12 mb-0 ms-auto p-0">
+                            <div class="col-xl-2 col-lg-3 col-md-4 col-12 mb-0 ms-auto p-0">
                                 <button type="button"   class="mr-3" mat-raised-button
                                     color="primary" (click)="calculateGrandTotal()">
                                     Calculate Invoice
