--- a/web1/src/app/sale/customer-list/customer-list.component.html
+++ b/web1/src/app/sale/customer-list/customer-list.component.html
@@ -1,134 +1,137 @@
-
 <section class="content">
-    <div class="container-fluid">
-      <div class="block-header">
-        <div class="row clearfix">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
-            <div class="card p-0">
-              <div class="header p-2 py-0 pt-1">
-                <div class="row">
-                  <div class="col-md-1 col-12 p-0 ms-3">
-                    <h2>Customer List</h2>
-                  </div>
-                  <div class="ps-md-0 ps-1 pt-1" style="width: 40px;">
-                    <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
-                      (click)="exportAsXLSX()"></i>
-                  </div>
-                  <div class="col-md-2 col-1 ps-md-0 ps-1">
-                    <select class=" form-control"
-                      style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
-                      [(ngModel)]="itemsPerPage" (change)="getList();">
-                      <option [ngValue]="10">Show 10 Row</option>
-                      <option [ngValue]="25">Show 25 Row</option>
-                      <option [ngValue]="50">Show 50 Row</option>
-                      <option [ngValue]="100">Show 100 Row</option>
-                      <option [ngValue]="250">Show 250Row</option>
-                      <option [ngValue]="500">Show 500 Row</option>
-                    </select>
-                  </div>
-                  <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
-                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
-                      [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
-                      (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
-                    </ngb-pagination>
-                  </div>
-                  <div class="col-md-2 col-4 ms-auto">
-                    <div class="input-group">
-                      <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
-                        class="form-control" />
-                    </div>
-                  </div>
-                  <div class="col-md-1 col-1" style="width: 70px; padding: 0;">
-                    <mat-icon *ngIf="addCustomerSearch" class="col-white plus_icon me-1" [routerLink]="['/sale/billing',0,0]"> add</mat-icon>
-                    <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview" title="Grid View">grid_on
-                    </mat-icon>
+  <div class="container-fluid">
+    <div class="block-header">
+      <div class="row clearfix">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
+          <div class="card p-0">
+            <div class="header p-2 py-0 pt-1">
+              <div class="row">
+                <div class="col-lg-2 col-md-2 col-4 p-0 ms-3">
+                  <h2>Customer <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
+                      (click)="exportAsXLSX()"></i></h2>
+                </div>
+
+                <div class="col-md-2 col-2 ps-md-0 ps-1 order-3 order-md-1">
+                  <select class=" form-control"
+                    style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
+                    [(ngModel)]="itemsPerPage" (change)="getList();">
+                    <option [ngValue]="10">Show 10 Row</option>
+                    <option [ngValue]="25">Show 25 Row</option>
+                    <option [ngValue]="50">Show 50 Row</option>
+                    <option [ngValue]="100">Show 100 Row</option>
+                    <option [ngValue]="250">Show 250Row</option>
+                    <option [ngValue]="500">Show 500 Row</option>
+                  </select>
+                </div>
+                <div class="col-md-3 col-9 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                  <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                    [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                    (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                  </ngb-pagination>
+                </div>
+                <div class="col-md-2 col-5 ms-auto order-0 order-md-1">
+                  <div class="input-group">
+                    <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
+                      class="form-control" />
                   </div>
                 </div>
-              </div>
-              <!-- Grid View start -->
-              <div class="row mt-2 p-2" *ngIf="dataList?.length !== 0 && !gridview" style="overflow:auto;height:530px; ">
-                <div class="col-md-3" *ngFor="let data of dataList let i = index;">
-                  <div class="course-card" style="height: 28rem;">
-                    <div class="course-card-body">
-                      <div class="course-card-top-overflow text-white">
-                        <img [src]="data.PhotoURL" alt="Image" class="mx-auto d-block cardImg" />
-                      </div>
-                      <h2 class="text-center m-0">{{data.Name}}</h2>
-                      <p class="text-center m-0">{{data.MobileNo1}}</p>
-                      <p class="text-center m-0">{{data.Email}}</p>
-                      <p class="text-center m-0 cardAddress">{{data.Address }}</p>
-                      <div class="text-center mb-3">
-                        <mat-icon *ngIf="editCustomerSearch"  class="edit_icon ms-1" [routerLink]="['/sale/billing',data.ID,0]">edit</mat-icon>
-                        <mat-icon *ngIf="deleteCustomerSearch"  class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
-                      </div>
-                    </div>
-                  </div>
+                <div class="col-md-1 col-1  order-1 order-md-1" style="width: 70px; padding: 0;">
+                  <mat-icon *ngIf="addCustomerSearch" class="col-white plus_icon me-1"
+                    [routerLink]="['/sale/billing',0,0]"> add</mat-icon>
+                  <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview" title="Grid View">grid_on
+                  </mat-icon>
                 </div>
               </div>
-              <!-- Grid View end -->
-              <!-- customer list start -->
-              <div class="body mt-2 p-2">
-                <div class="row" *ngIf="gridview">
-                  <div class="col-sm-12" style="overflow: auto; height: 530px;">
-                    <div class="table-responsive">
-                      <table class="table table-striped table-hover table-sm table-bordered"
-                        style="border: 2px solid #fff !important;">
-                        <thead>
-                          <tr>
-                            <th class="text-left">Action</th>
-                            <th class="text-left">S.No</th>
-                            <th class="text-left">Cust_ID</th>
-                            <th class="text-left">Cust_SRNo</th>
-                            <th class="text-left">CustomerName</th>
-                            <th class="text-left">MobileNo1</th>
-                            <th class="text-left">MobileNo2</th>
-                            <th class="text-left">PhoneNo</th>
-                            <th class="text-left">Email</th>
-                            <th class="text-left">DOB</th>
-                            <th class="text-left">Anniversary</th>
-                            <th class="text-left">Address</th>
-                            <th class="text-left">CreatedBy</th>
-                            <th class="text-left">UpdatedBy</th>
-                            <th class="text-left">ShopName</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr class="text-center" *ngFor="let data of dataList let i = index;"
-                            style="white-space: nowrap;">
-                            <td style="width: 7%;">
-                              <button class="bg-btn" >
-                                <mat-icon class="edit_icon pt-1">remove_red_eye</mat-icon>
-                              </button>
-                              <mat-icon *ngIf="editCustomerSearch" class="edit_icon ms-1" [routerLink]="['/sale/billing',data.ID,0,]">edit</mat-icon>
-                              <mat-icon *ngIf="deleteCustomerSearch" class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
-                            </td>
-                            <td class="text-left">{{dataList.length - i }}</td>
-                            <td class="text-left">{{data.Idd}} </td>
-                            <td class="text-left">{{data.Sno}} </td>
-                            <td class="text-left">{{data.Name}} </td>
-                            <td class="text-left">{{data.MobileNo1}} </td>
-                            <td class="text-left">{{data.MobileNo2}} </td>
-                            <td class="text-left">{{data.PhoneNo}} </td>
-                            <td class="text-left">{{data.Email}} </td>
-                            <td class="text-left">{{data.DOB}}</td>
-                            <td class="text-left">{{data.Anniversary}}</td>
-                            <td class="text-left">{{data.Address}} </td>
-                            <td class="text-left">{{data.CreatedPerson}} </td>
-                            <td class="text-left">{{data.UpdatedPerson}} </td>
-                            <td class="text-left">{{data.ShopName}} 
-                              <span [style.color]="'blue'" *ngIf="data.AreaName !== null"> ({{data.AreaName}})</span> 
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- customer list end -->
             </div>
+            <!-- Grid View start -->
+            <div class="row mt-5 mt-md-2 p-2" *ngIf="dataList?.length !== 0 && !gridview"
+              style="overflow:auto;height:530px; ">
+              <div class="col-xl-3 col-lg-4 col-md-6" *ngFor="let data of dataList let i = index;">
+                <div class="course-card" style="height: 28rem;">
+                  <div class="course-card-body">
+                    <div class="course-card-top-overflow text-white">
+                      <img [src]="data.PhotoURL" alt="Image" class="mx-auto d-block cardImg" />
+                    </div>
+                    <h2 class="text-center m-0">{{data.Name}}</h2>
+                    <p class="text-center m-0">{{data.MobileNo1}}</p>
+                    <p class="text-center m-0">{{data.Email}}</p>
+                    <p class="text-center m-0 cardAddress">{{data.Address }}</p>
+                    <div class="text-center mb-3">
+                      <mat-icon *ngIf="editCustomerSearch" class="edit_icon ms-1"
+                        [routerLink]="['/sale/billing',data.ID,0]">edit</mat-icon>
+                      <mat-icon *ngIf="deleteCustomerSearch" class="delete_icon ms-1"
+                        (click)="deleteItem(i)">delete_forever</mat-icon>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Grid View end -->
+            <!-- customer list start -->
+            <div class="body mt-5 mt-md-2 p-2">
+              <div class="row" *ngIf="gridview">
+                <div class="col-sm-12" style="overflow: auto; height: 530px;">
+                  <div class="table-responsive">
+                    <table class="table table-striped table-hover table-sm table-bordered"
+                      style="border: 2px solid #fff !important;">
+                      <thead>
+                        <tr>
+                          <th class="text-left">Action</th>
+                          <th class="text-left">S.No</th>
+                          <th class="text-left">Cust_ID</th>
+                          <th class="text-left">Cust_SRNo</th>
+                          <th class="text-left">CustomerName</th>
+                          <th class="text-left">MobileNo1</th>
+                          <th class="text-left">MobileNo2</th>
+                          <th class="text-left">PhoneNo</th>
+                          <th class="text-left">Email</th>
+                          <th class="text-left">DOB</th>
+                          <th class="text-left">Anniversary</th>
+                          <th class="text-left">Address</th>
+                          <th class="text-left">CreatedBy</th>
+                          <th class="text-left">UpdatedBy</th>
+                          <th class="text-left">ShopName</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr class="text-center" *ngFor="let data of dataList let i = index;"
+                          style="white-space: nowrap;">
+                          <td style="width: 7%;">
+                            <button class="bg-btn">
+                              <mat-icon class="edit_icon pt-1">remove_red_eye</mat-icon>
+                            </button>
+                            <mat-icon *ngIf="editCustomerSearch" class="edit_icon ms-1"
+                              [routerLink]="['/sale/billing',data.ID,0,]">edit</mat-icon>
+                            <mat-icon *ngIf="deleteCustomerSearch" class="delete_icon ms-1"
+                              (click)="deleteItem(i)">delete_forever</mat-icon>
+                          </td>
+                          <td class="text-left">{{dataList.length - i }}</td>
+                          <td class="text-left">{{data.Idd}} </td>
+                          <td class="text-left">{{data.Sno}} </td>
+                          <td class="text-left">{{data.Name}} </td>
+                          <td class="text-left">{{data.MobileNo1}} </td>
+                          <td class="text-left">{{data.MobileNo2}} </td>
+                          <td class="text-left">{{data.PhoneNo}} </td>
+                          <td class="text-left">{{data.Email}} </td>
+                          <td class="text-left">{{data.DOB}}</td>
+                          <td class="text-left">{{data.Anniversary}}</td>
+                          <td class="text-left">{{data.Address}} </td>
+                          <td class="text-left">{{data.CreatedPerson}} </td>
+                          <td class="text-left">{{data.UpdatedPerson}} </td>
+                          <td class="text-left">{{data.ShopName}}
+                            <span [style.color]="'blue'" *ngIf="data.AreaName !== null"> ({{data.AreaName}})</span>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- customer list end -->
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
